fixes text alignment

--- a/app/styles/header.css
+++ b/app/styles/header.css
@@ -39,7 +39,7 @@ header {
     display: flex;
     justify-content: center;
     font-size: 15px;
-    color: white;
+    color: #475569;
 }
 
 
